--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "homepage": "https://diegoperezm.github.io/responsive-web-design-certification-journal",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "bootstrap": "^4.5.3",
-    "chart.js": "^2.9.4",
-    "immer": "^9.0.12",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.6.0",
+    "bootstrap": "4.5.3",
+    "chart.js": "2.9.4",
+    "immer": "9.0.12",
+    "react": "17.0.1",
+    "react-bootstrap": "1.4.0",
+    "react-chartjs-2": "2.11.1",
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "uuid": "8.3.2",
+    "web-vitals": "0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,9 +47,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "prettier": "^2.6.0",
-    "pretty-quick": "^3.1.3",
-    "husky": "^7.0.0"
+    "gh-pages": "3.1.0",
+    "prettier": "2.6.0",
+    "pretty-quick": "3.1.3",
+    "husky": "7.0.0"
   }
 }
